@@ -1,5 +1,5 @@
 /* Error constants.  Linux/HPPA specific version.
-   Copyright (C) 1996,1997,1998,1999,2000,2002 Free Software Foundation, Inc.
+   Copyright (C) 1996-2012 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -33,12 +33,16 @@
 #  define EOWNERDEAD		254
 # endif
 
-# ifndef ENOTRECOVERABLE 
+# ifndef ENOTRECOVERABLE
 #  define ENOTRECOVERABLE	255
 # endif
 
 # ifndef ERFKILL
-#  define ERFKILL		256 
+#  define ERFKILL		256
+# endif
+
+# ifndef EHWPOISON
+#  define EHWPOISON		257
 # endif
 
 # ifndef __ASSEMBLER__
