@@ -35,4 +35,4 @@ socketpair	-	socketpair	i:iiif	__socketpair	socketpair
 
 setrlimit	-	setrlimit	i:ip	__setrlimit	setrlimit	
 getrlimit	-	getrlimit	i:ip	__getrlimit	getrlimit	
-prlimit64	EXTRA	prlimit64	i:iipp	prlimit64	prlimit64@@GLIBC_2.17
+prlimit64	EXTRA	prlimit64	i:iipp	__prlimit64	prlimit64@@GLIBC_2.17
